--- a/experience.html
+++ b/experience.html
@@ -25,16 +25,17 @@
     <main class="flex">
       <div class="card">
         <h2>Resume</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in and around Detroit my entire life and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a logistics coordinator and music producer and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>Thank you for visiting my profile page. A preview of my resume can be found below. You can open the full file <a href="images/resume.pdf">here.</a>
+        <!-- iframe from https://www.w3docs.com/snippets/html/how-to-embed-pdf-in-html.html -->
+        <iframe src="images/resume.pdf" width="100%" height="500px"></iframe>
       </div>
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/Insomniac_Mike" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/bwalker206/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/bwalker206" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2020, Brian Walker</p>
     </footer>
