--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/Insomniac_Mike" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/bwalker206/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/bwalker206" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2020, Brian Walker</p>
     </footer>
