--- a/index.html
+++ b/index.html
@@ -40,7 +40,19 @@
           <li>Node.js</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div> 
+      </div>
+
+      <div class="card">
+        <h2>Hobbies</h2>
+        <img src="images/djing.jpg" alt="DJ setup" width="100%">    
+        <ul>
+          <li>Music Production</li>
+          <li>Fitness</li>
+          <li>Politics</li>
+          <li>Comics</li>
+          <li>Science</li>
+        </ul>
+      </div>
 
     </main>
     <footer>
