update image size

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <div class="card">
         <h2>Hobbies</h2>
-        <img src="images/djing.jpg" alt="DJ setup" width="100%">    
+        <img class="dj" src="images/djing.jpg" alt="DJ setup">    
         <ul>
           <li>Music Production</li>
           <li>Fitness</li>
