--- a/experience.html
+++ b/experience.html
@@ -27,7 +27,7 @@
         <h2>Resume</h2>
         <p>Thank you for visiting my profile page. A preview of my resume can be found below. You can open the full file <a href="images/resume.pdf">here.</a>
         <!-- iframe from https://www.w3docs.com/snippets/html/how-to-embed-pdf-in-html.html -->
-        <iframe src="images/resume.pdf" width="100%" height="500px"></iframe>
+        <iframe class="resume" src="images/resume.pdf" height="600"></iframe>
       </div>
 
     </main>
