--- a/contact.html
+++ b/contact.html
@@ -25,34 +25,19 @@
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in and around Detroit my entire life and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a logistics coordinator and music producer and am a life-long learner who's always interested in expanding my skills.</p>
-      </div> 
-
-      <div class="card">
-        <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Node.js</li>
-        </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div>
-
-      <div class="card">
-        <h2>Hobbies</h2>
-        <img class="dj" src="images/djing.jpg" alt="DJ setup">    
-        <ul>
-          <li>Music Production</li>
-          <li>Fitness</li>
-          <li>Politics</li>
-          <li>Comics</li>
-          <li>Science</li>
-        </ul>
+        <h2>Send e-mail to bwalker206@gmail:</h2>
+        <p>Thank you for visiting my profile page. Feel free to contact me using the form provided below</a>
+        <!-- email form from https://www.w3schools.com/html/tryit.asp?filename=tryhtml_form_mail -->
+        <form action="mailto:bwalker206@gmail.com" method="post" enctype="text/plain">
+          Name:<br>
+          <input type="text" name="name"><br>
+          E-mail:<br>
+          <input type="text" name="mail"><br>
+          Comment:<br>
+          <input type="text" name="comment" size="50"><br><br>
+          <input type="submit" value="Send">
+          <input type="reset" value="Reset">
+          </form>
       </div>
 
     </main>
