--- a/experience.html
+++ b/experience.html
@@ -12,7 +12,8 @@
         <ul class="nav">
           <li class="name">Brian Walker</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
@@ -25,7 +26,7 @@
     <main class="flex">
       <div class="card">
         <h2>Resume</h2>
-        <p>Thank you for visiting my profile page. A preview of my resume can be found below. You can open the full file <a href="images/resume.pdf">here.</a>
+        <p>A preview of my resume can be found below. You can open the full file <a href="images/resume.pdf">here.</a>
         <!-- iframe from https://www.w3docs.com/snippets/html/how-to-embed-pdf-in-html.html -->
         <iframe class="resume" src="images/resume.pdf" height="600"></iframe>
       </div>
