--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
-        <ul class="nav">
-          <li class="name">Brian Walker</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </div>
+    <nav class="main-nav">
+      <ul class="nav">
+        <li class="name">Brian Walker</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
     <header>
       <img src="images/me2.jpg" alt="Picture of Brian Walker" class="profile-image">
@@ -24,21 +24,30 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Send e-mail to bwalker206@gmail:</h2>
         <p>Thank you for visiting my profile page. Feel free to contact me using the form provided below</a>
         <!-- email form from https://www.w3schools.com/html/tryit.asp?filename=tryhtml_form_mail -->
-        <form action="mailto:bwalker206@gmail.com" method="post" enctype="text/plain">
-          Name:<br>
-          <input type="text" name="name"><br>
-          E-mail:<br>
-          <input type="text" name="mail"><br>
-          Comment:<br>
-          <input type="text" name="comment" size="50"><br><br>
-          <input type="submit" value="Send">
-          <input type="reset" value="Reset">
-          </form>
-      </div>
+        <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+          <div class="row">
+            <label class="required" for="name">Your name:</label><br />
+            <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+            <span id="name_validation" class="error_message"></span>
+          </div>
+          <div class="row">
+            <label class="required" for="email">Your email:</label><br />
+            <input id="email" class="input" name="email" type="text" value="" size="30" /><br />
+            <span id="email_validation" class="error_message"></span>
+          </div>
+          <div class="row">
+            <label class="required" for="message">Your message:</label><br />
+            <textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
+            <span id="message_validation" class="error_message"></span>
+          </div>
+            
+            <input id="submit_button" type="submit" value="Send email" />
+        </form>
+      </section>
 
     </main>
     <footer>
