--- a/experience.html
+++ b/experience.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Brian Walker</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header>
       <img src="images/me2.jpg" alt="Picture of Brian Walker" class="profile-image">
@@ -24,12 +24,12 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Resume</h2>
         <p>A preview of my resume can be found below. You can open the full file <a href="images/resume.pdf">here.</a>
         <!-- iframe from https://www.w3docs.com/snippets/html/how-to-embed-pdf-in-html.html -->
         <iframe class="resume" src="images/resume.pdf" height="600"></iframe>
-      </div>
+        </section>
 
     </main>
     <footer>
