--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
-        <ul class="nav">
-          <li class="name">Brian Walker</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </div>
+    <nav class="main-nav">
+      <ul class="nav">
+        <li class="name">Brian Walker</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
     <header>
       <img src="images/me2.jpg" alt="Picture of Brian Walker" class="profile-image">
@@ -24,13 +24,13 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web designer who loves everything about the web. I've lived in and around Detroit my entire life and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
         <p>I’ve been a logistics coordinator and music producer and am a life-long learner who's always interested in expanding my skills.</p>
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -41,9 +41,9 @@
           <li>Node.js</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div>
+      </section>
 
-      <div class="card">
+      <section class="card">
         <h2>Hobbies</h2>
         <img class="dj" src="images/djing.jpg" alt="DJ setup">    
         <ul>
@@ -53,7 +53,7 @@
           <li>Comics</li>
           <li>Science</li>
         </ul>
-      </div>
+      </section>
 
     </main>
     <footer>
