Create contact form

--- a/contact.html
+++ b/contact.html
@@ -27,26 +27,49 @@
       <section class="card">
         <h2>Send e-mail to bwalker206@gmail:</h2>
         <p>Thank you for visiting my profile page. Feel free to contact me using the form provided below</a>
-        <!-- email form from https://www.w3schools.com/html/tryit.asp?filename=tryhtml_form_mail -->
-        <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
-          <div class="row">
-            <label class="required" for="name">Your name:</label><br />
-            <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
-            <span id="name_validation" class="error_message"></span>
-          </div>
-          <div class="row">
-            <label class="required" for="email">Your email:</label><br />
-            <input id="email" class="input" name="email" type="text" value="" size="30" /><br />
-            <span id="email_validation" class="error_message"></span>
-          </div>
-          <div class="row">
-            <label class="required" for="message">Your message:</label><br />
-            <textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
-            <span id="message_validation" class="error_message"></span>
-          </div>
-            
-            <input id="submit_button" type="submit" value="Send email" />
-        </form>
+        <!-- email form from https://www.freecontactform.com/form-guides/html-email-form -->
+        <link href="contact-form.css" rel="stylesheet">
+
+<div class="fcf-body">
+
+    <div id="fcf-form">
+    <h3 class="fcf-h3">Contact us</h3>
+
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+        
+        <div class="fcf-form-group">
+            <label for="Name" class="fcf-label">Your name</label>
+            <div class="fcf-input-group">
+                <input type="text" id="Name" name="Name" class="fcf-form-control" required>
+            </div>
+        </div>
+
+        <div class="fcf-form-group">
+            <label for="Email" class="fcf-label">Your email address</label>
+            <div class="fcf-input-group">
+                <input type="email" id="Email" name="Email" class="fcf-form-control" required>
+            </div>
+        </div>
+
+        <div class="fcf-form-group">
+            <label for="Message" class="fcf-label">Your message</label>
+            <div class="fcf-input-group">
+                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
+            </div>
+        </div>
+
+        <div class="fcf-form-group">
+            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send Message</button>
+        </div>
+
+        <div class="fcf-credit" id="fcf-credit">
+        Simple HTML email form provided by: <a href="https://www.freecontactform.com" target="_blank">FreeContactForm.com</a>
+        </div>
+
+    </form>
+    </div>
+
+</div>
       </section>
 
     </main>
