validated contacts html

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <main class="flex">
       <section class="card">
         <h2>Send e-mail to bwalker206@gmail:</h2>
-        <p>Thank you for visiting my profile page. Feel free to contact me using the form provided below</a>
+        <p>Thank you for visiting my profile page. Feel free to contact me using the form provided below</p>
         <!-- email form from https://www.freecontactform.com/form-guides/html-email-form -->
         <link href="contact-form.css" rel="stylesheet">
 
