Edit card size/folder structure

--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>Brian Walker's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
@@ -24,7 +25,7 @@
     </header>
 
     <main class="flex">
-      <section class="card">
+      <section class="card" id="resume">
         <h2>Resume</h2>
         <p>A preview of my resume can be found below. You can open the full file <a href="images/resume.pdf">here.</a>
         <!-- iframe from https://www.w3docs.com/snippets/html/how-to-embed-pdf-in-html.html -->
