--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>Brian Walker's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
@@ -24,18 +25,18 @@
     </header>
 
     <main class="flex">
-      <section class="card">
+      <section class="card" id="contact">
         <h2>Send e-mail to bwalker206@gmail:</h2>
         <p>Thank you for visiting my profile page. Feel free to contact me using the form provided below</p>
         <!-- email form from https://www.freecontactform.com/form-guides/html-email-form -->
-        <link href="contact-form.css" rel="stylesheet">
+        <link href="css/contact-form.css" rel="stylesheet">
 
 <div class="fcf-body">
 
     <div id="fcf-form">
     <h3 class="fcf-h3">Contact us</h3>
 
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="php/contact-form-process.php">
         
         <div class="fcf-form-group">
             <label for="Name" class="fcf-label">Your name</label>
