--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     </header>
 
     <main class="flex">
-      <section class="card">
+      <section class="card card-1">
         <h2>Background</h2>
         <p>I’m an aspiring web designer who loves everything about the web. I've lived in and around Detroit my entire life and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
         <p>I’ve been a logistics coordinator and music producer and am a life-long learner who's always interested in expanding my skills.</p>
       </section> 
 
-      <section class="card">
+      <section class="card card-2">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -44,7 +44,7 @@
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </section>
 
-      <section class="card">
+      <section class="card card-3">
         <h2>Hobbies</h2>
         <img class="dj" src="images/djing.jpg" alt="DJ setup">    
         <ul>
