--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/Insomniac_Mike" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/bwalker206/" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/bwalker206" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/Insomniac_Mike" class="social twitter" target="_blank">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/bwalker206/" class="social linkedin" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/bwalker206" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2020, Brian Walker</p>
     </footer>
