--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Personal Profile Page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Personal Profile Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900"
+      rel="stylesheet"
+    />
+  </head>
   <body>
-
     <nav class="main-nav">
       <ul class="nav">
         <li class="name">Brian Walker</li>
@@ -19,7 +22,11 @@
     </nav>
 
     <header>
-      <img src="images/me2.jpg" alt="Picture of Brian Walker" class="profile-image">
+      <img
+        src="images/me2.jpg"
+        alt="Picture of Brian Walker"
+        class="profile-image"
+      />
       <h1 class="tag name">Hello, I’m Brian.</h1>
       <p class="tag location">My home is Detroit, Michigan.</p>
     </header>
@@ -27,13 +34,24 @@
     <main class="flex">
       <section class="card card-1">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in and around Detroit my entire life and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a logistics coordinator and music producer and am a life-long learner who's always interested in expanding my skills.</p>
-      </section> 
+        <p>
+          I’m an aspiring web designer who loves everything about the web. I've
+          lived in and around Detroit my entire life and have worked in lots of
+          different jobs. I’m excited to bring my life experience to the process
+          of building fantastic looking websites.
+        </p>
+        <p>
+          I’ve been a logistics coordinator and music producer and am a
+          life-long learner who's always interested in expanding my skills.
+        </p>
+      </section>
 
       <section class="card card-2">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>
+          I want to master the process of building web sites and increase my
+          knowledge, skills and abilities in:
+        </p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -41,12 +59,15 @@
           <li>React</li>
           <li>Node.js</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>
+          I’d like to work for a web design firm helping clients create an
+          impressive online presence.
+        </p>
       </section>
 
       <section class="card card-3">
         <h2>Hobbies</h2>
-        <img class="dj" src="images/djing.jpg" alt="DJ setup">    
+        <img class="dj" src="images/djing.jpg" alt="DJ setup" />
         <ul>
           <li>Music Production</li>
           <li>Fitness</li>
@@ -55,15 +76,35 @@
           <li>Science</li>
         </ul>
       </section>
-
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/Insomniac_Mike" class="social twitter" target="_blank">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/bwalker206/" class="social linkedin" target="_blank">LinkedIn</a></li>
-        <li><a href="https://github.com/bwalker206" class="social github" target="_blank">Github</a></li>
+        <li>
+          <a
+            href="https://twitter.com/Insomniac_Mike"
+            class="social twitter"
+            target="_blank"
+            >Twitter</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/bwalker206/"
+            class="social linkedin"
+            target="_blank"
+            >LinkedIn</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://github.com/bwalker206"
+            class="social github"
+            target="_blank"
+            >Github</a
+          >
+        </li>
       </ul>
       <p class="copyright">Copyright 2020, Brian Walker</p>
     </footer>
   </body>
-  </html>
+</html>
