Update social links

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <ul>
         <li>
           <a
-            href="https://twitter.com/Insomniac_Mike"
+            href="https://twitter.com/BWalkerWebDev"
             class="social twitter"
             target="_blank"
             >Twitter</a
@@ -89,7 +89,7 @@
         </li>
         <li>
           <a
-            href="https://www.linkedin.com/in/bwalker206/"
+            href="https://www.linkedin.com/in/brianwalker150/"
             class="social linkedin"
             target="_blank"
             >LinkedIn</a
